HEAD
	+ Bump debian compat
	+ Prevent to remove sync shares flag if module has unsaved changes
8.0.0
	+ Set version to 8.0.0
	+ Set the minimal version of the libauthen-krb5-easy-perl package
	+ Update enable-module script
	+ Add initial-setup script
	+ Disable password expiration for the special DNS domain user
	+ Increase size of the username field in samba_access table. Fix #2131
	+ Prevent LDAP enumeration
	+ Add option to disable home share
	+ Disable usershare parameter by default
7.1.0
	+ Bump version number
7.0.3
    + Fix Samba full audit for logs module. Fix ZS-146 #2094
	+ Fix users email import. Fix ZS-159
	+ Check if mail is already in use in groups form. Fix ZS-39 #1975
	+ Disable the "Disable account" checkbox for critical system Users. Fix ZS-169
7.0.2
	+ Remove deprecated flag from ldbsearch
7.0.1
	+ Fix ADC join to an existent domain
	+ Fix config backup replacing legacy dns path in favor of bind-dns (fix #2025)
7.0.0
	+ Change default login shell under PAM to /usr/bin/bash
	+ Integrate Samba 4.11
6.2.0
	+ Set version number to 6.2.0
6.1.2
	+ Add enable/disable input vfs full_audit module feature for commercial edition
	+ Add "samba settings" tab to the FileSharing composite
6.1.1
	+ Add users and groups importer GUI feature for commercial edition
	+ Add users and groups exporter GUI feature for commercial edition
6.1
	+ Add users/groups import/export scripts to /usr/share/zentyal-samba. (fixes #1852)
	+ Add pagination to the tree view
	+ Do not try to listen on unconfigured network interfaces
6.0.1
	+ Add missing dynamic RPC ports in firewall rules
6.0
	+ Integration with RADIUS module
	+ Integrate Samba 4.7
	+ Fix group permissions when selecting "All domain users"
	+ Remove unused 1024 port from service list
	+ Add confkey to allow Administrator user in shares permissions for
	  backwards compatibility with Zentyal 3.0
5.1.2
	+ Enforce share directory creation if not exists, even if not tagged
	+ Enforce change of homeDrive for existing users